[package]
name = "bevy_uniform_grid_2d"
version = "0.4.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16", default-features = false, features = ["bevy_gizmos"] }
rustc-hash = "2.1.1"
smallvec = "1.15.1"
thiserror = "2.0.12"

[dev-dependencies]
bevy = { version = "0.16", default-features = true }
criterion = { version = "0.5", features = ["html_reports"] }
iyes_perf_ui = "0.5"
rand = "0.8"

[[example]]
name = "minimal"

[[example]]
name = "stress_test"

[[bench]]
name = "benchmarks"
harness = false
 
[profile.dev]
debug = false
strip = "debuginfo"
opt-level = 0

[profile.dev.package."*"]
opt-level = 3
