[package]
name = "bevy_uniform_grid_2d"
version = "0.3.1"
edition = "2024"
description = "A simple Bevy plugin for uniform grid spatial indexing"
authors = ["Conner Holden"]
keywords = ["game", "grid", "gamedev", "spatial", "bevy"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/conner-holden/bevy_uniform_grid_2d.git"
homepage = "https://github.com/conner-holden/bevy_uniform_grid_2d"
documentation = "https://docs.rs/bevy_uniform_grid_2d"

[dependencies]
bevy = { version = "0.15", default-features = false, features = ["bevy_gizmos"] }
rustc-hash = "2.1.1"
smallvec = "1.15.1"
thiserror = "2.0.12"

[dev-dependencies]
bevy = { version = "0.15", default-features = true }
criterion = { version = "0.5", features = ["html_reports"] }
iyes_perf_ui = "0.4"
rand = "0.8"

[[example]]
name = "minimal"

[[example]]
name = "stress_test"

[[example]]
name = "resize"

[[bench]]
name = "benchmarks"
harness = false
 
[profile.dev]
debug = false
strip = "debuginfo"
opt-level = 0

[profile.dev.package."*"]
opt-level = 3
